fix z-indexes

--- a/assets/styles/tailwind.pcss
+++ b/assets/styles/tailwind.pcss
@@ -41,7 +41,7 @@
 
 @layer components {
   .modal-wrapper {
-    @apply fixed top-0 left-0 w-full h-full z-20 overflow-y-auto p-4 bg-opacity-80 bg-chocolate hidden md:items-center md:justify-center;
+    @apply fixed top-0 left-0 w-full h-full z-30 overflow-y-auto p-4 bg-opacity-80 bg-chocolate hidden md:items-center md:justify-center;
   }
   .modal-wrapper.is-open {
     @apply block md:flex;
